--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB_URL=mongodb+srv://skr36880:XKVs0imMTjjEEf8L@gwl.fjzb1lj.mongodb.net/?retryWrites=true&w=majority&appName=gwl
 
-PORT=4000 
+PORT=https://gwl-v4-back.onrender.com
 
 JWT_SECRET="GWL-POINTSYSTEM"
